# ClarkOS

./: .gitignore
.github/workflows/: build-iso.yml
clarkos/: README.md
clarkos/live-build-config/: build-iso.sh  init.sh  setup.sh
clarkos/live-build-config/auto/: build  config
clarkos/live-build-config/config/: binary  bootstrap
clarkos/live-build-config/config/includes.chroot/etc/skel/: setup_user.sh
clarkos/live-build-config/config/includes.chroot/etc/sudoers.d/: clark
clarkos/live-build-config/config/includes.chroot/etc/systemd/system/: clark-desktop.service
clarkos/live-build-config/config/includes.chroot/etc/systemd/system/getty@tty1.service.d/: override.conf
clarkos/live-build-config/config/package-lists/: clarkos.list.chroot
clarkos/scripts/: build.sh  setup.sh
clarkos/tauri-desktop/: index.html  package.json
clarkos/tauri-desktop/src/: App.tsx
clarkos/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clarkos/tauri-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
clarkos/tauri-desktop/src/components/: AppContent.tsx  AppLauncher.tsx  FileManager.tsx  SettingsPanel.tsx  SystemTray.tsx  Taskbar.tsx  TerminalEmulator.tsx  WebBrowser.tsx  WindowControls.tsx  WindowManager.tsx
clarkos/tauri-desktop/src/stores/: windowStore.ts
clarkos/tauri-desktop/src/styles/: index.css
